crates/compiler/src/tests/e2e/good/0213_struct_wrapper_impl_generic/main.gom
struct Wrapper[T] {
    value: T,
}

impl Wrapper[int32] {
    fn get(self: Wrapper[int32]) -> int32 {
        self.value
    }
}

fn main() {
    let w = Wrapper { value: 42 };
    println(w.get().to_string());
}
