crates/compiler/src/tests/e2e/bad/0048_generic_struct_missing_type_args/main.gom
struct Stack[T] {
    items: Vec[T],
    size: Ref[int32],
}

impl Stack {
    fn new() -> Stack[int32] {
        Stack { items: Vec::new(), size: ref(0i32) }
    }
}

fn main() {
    let s = Stack::new();
    println(ref_get(s.size).to_string());
}
